--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 					</header>
 					<div class="row">
 						<div class="col-12">
-							<form method="post" action="https://formspree.io/oscieux@gmail.com">
+							<form method="post" action="#">
 								<div class="row">
 									<div class="col-6 col-12-small">
 										<input type="text" name="name" id="name" placeholder="Name" />
@@ -205,10 +205,10 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="https://twitter.com/oscieux" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.facebook.com/oscieuxdatascientist/?modal=admin_todo_tour" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.linkedin.com/in/oscieux/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/oscieux" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://twitter.com/oscieux" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://www.facebook.com/oscieuxdatascientist/?modal=admin_todo_tour" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.linkedin.com/in/oscieux/" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/oscieux" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 								<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
