--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--
 	Miniport by HTML5 UP
 	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Free for personal and commercial use under the CCA 3.0 license ( /license)
 -->
 <html>
 	<head>
@@ -15,6 +15,7 @@
 
 			gtag('config', 'UA-141522262-1');
 		</script>
+
 		<title>Olivier Scieux, data scientist</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -121,8 +122,8 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">health study</a></h3>
+								<a href="https://github.com/oscieux/health_study" target="_blank" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<h3><a href="https://github.com/oscieux/health_study" target="_blank">health study</a></h3>
 								<!-- <p>Ornare nulla proin odio consequat.</p> -->
 							</article>
 						</div>
@@ -178,28 +179,33 @@
 					</header>
 					<div class="row">
 						<div class="col-12">
-							<form method="post" action="#">
+							<ul class="social">
+								<li><a href="mailto:oscieux@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email Us</span></a></li>
+								<li><a title="(+33) 6 40 84 17 55" class="icon solid alt fa-phone"><span class="label">Call Me</span></a></li>
+							</ul>
+							<!--<form method="post" action = "#">
 								<div class="row">
 									<div class="col-6 col-12-small">
-										<input type="text" name="name" id="name" placeholder="Name" />
+										<input type="text" class="form-control" name="name" id="name" placeholder="Name" />
 									</div>
 									<div class="col-6 col-12-small">
 										<input type="text" name="email" id="email" placeholder="Email" />
 									</div>
 									<div class="col-12">
 										<input type="text" name="subject" id="subject" placeholder="Subject" />
+										
 									</div>
 									<div class="col-12">
 										<textarea name="message" id="message" placeholder="Message"></textarea>
 									</div>
 									<div class="col-12">
 										<ul class="actions">
-											<li><input type="submit" value="Send Message" /></li>
+											<li><input id="submit" name="submit" type="submit" value="Send Message" /></li>
 											<li><input type="reset" value="Clear Form" class="alt" /></li>
 										</ul>
 									</div>
 								</div>
-							</form>
+							</form> -->
 						</div>
 						<div class="col-12">
 							<hr />
