--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">health study</a></h3>
+								<a href="https://github.com/oscieux/health_study" target="_blank" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<h3><a href="https://github.com/oscieux/health_study" target="_blank">health study</a></h3>
 								<!-- <p>Ornare nulla proin odio consequat.</p> -->
 							</article>
 						</div>
