--- a/index.html
+++ b/index.html
@@ -1,252 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Miniport by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141522262-1"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-
-			gtag('config', 'UA-141522262-1');
-		</script>
-		<title>Olivier Scieux, data scientist</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta http-equiv="refresh" content="0; url=https://github.com/oscieux">
 	</head>
-	<body class="is-preload">
-
-		<!-- Nav -->
-			<nav id="nav">
-				<ul class="container">
-					<li><a href="#top">Home</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
-				</ul>
-			</nav>
-
-		<!-- Home -->
-			<article id="top" class="wrapper style1">
-				<div class="container">
-					<div class="row">
-						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
-						</div>
-						<div class="col-8 col-7-large col-12-medium">
-							<header>
-								<h1>Hi. I'm <strong>Olivier Scieux</strong>.</h1>
-							</header>
-							<p>I'm a <strong>data scientist</strong>, living in <strong>France</strong> and working as a  <strong>freelancer</strong>.</p>
-							<p>I'm also available for hire as a data scientist.</p> 
-							<p><a href="#contact">Drop me a line</a> about your project if you're interested in working with me.</p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
-						</div>
-					</div>
-				</div>
-			</article>
-
-		<!-- Work -->
-			<article id="work" class="wrapper style2">
-				<div class="container">
-					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Data scientist, entrepreneur and marathonian.</p>
-					</header>
-					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-comments-o"></span>
-								<h3>Professional Employment</h3>
-								<p>
-									<strong>data scientist</strong>, 2019 - present
-								<p>
-									<strong>actuary</strong>, 2003 - 2019
-								</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-camera-retro"></span>
-								<h3>Technology Applications and Expertise</h3>
-								<ul>
-									<li>
-										<strong>Programming:</strong> Python, R
-									</li>
-									<li>
-										<strong>Statistics:</strong> Descriptive Statistics, Exploratory Data Analysis, ANOVA, Chi2 Test, Correlation
-									</li>
-									<li>
-										<strong>Machine Learning:</strong> Supervised Learning, Unsupervised Learning, Training & Test Data, Prediction
-									</li>
-									<li>
-										<strong>Visualization:</strong> Uni, Bi, Multivariable
-									</li>
-								</ul>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="icon featured fa-thumbs-o-up"></span>
-								<h3>Degrees</h3>
-								<p>
-									<strong>Master in Data Sciences</strong>, OpenClassrooms, Remote, 2019
-								</p>
-								<p>
-									<strong><abbr title="Diplôme Universitaire de Technologie">DUT</abbr></strong>, University of Caen, Caen, France, 2002
-								</p>
-							</section>
-						</div>
-					</div>
-					<footer>
-						<!-- <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p> -->
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-					</footer>
-				</div>
-			</article>
-
-		<!-- Portfolio -->
-			<article id="portfolio" class="wrapper style3">
-				<div class="container">
-					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<!-- <p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p> -->
-					</header>
-					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="https://github.com/oscieux/health_study" target="_blank" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="https://github.com/oscieux/health_study" target="_blank">health study</a></h3>
-								<!-- <p>Ornare nulla proin odio consequat.</p> -->
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">sales study</a></h3>
-								<!-- <p>Ornare nulla proin odio consequat.</p> -->
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">market research</a></h3>
-								<!-- <p>Ornare nulla proin odio consequat.</p> -->
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">counterfeit detection</a></h3>
-								<!-- <p>Ornare nulla proin odio consequat.</p> -->
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">revenues prediction</a></h3>
-								<!-- <p>Ornare nulla proin odio consequat.</p> -->
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">power demand</a></h3>
-								<!-- <p>Ornare nulla proin odio consequat.</p> -->
-							</article>
-						</div>
-					</div>
-					<footer>
-						<!-- <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p> -->
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
-					</footer>
-				</div>
-			</article>
-
-		<!-- Contact -->
-			<article id="contact" class="wrapper style4">
-				<div class="container medium">
-					<header>
-						<h2>Have me make stuff for you.</h2>
-						<!-- <p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p> -->
-					</header>
-					<div class="row">
-						<div class="col-12">
-							<ul class="social">
-								<li><a href="mailto:oscieux@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email Us</span></a></li>
-								<li><a title="(+33) 6 40 84 17 55" class="icon solid alt fa-phone"><span class="label">Call Me</span></a></li>
-							</ul>
-							<!--<form method="post" action = "#">
-								<div class="row">
-									<div class="col-6 col-12-small">
-										<input type="text" class="form-control" name="name" id="name" placeholder="Name" />
-									</div>
-									<div class="col-6 col-12-small">
-										<input type="text" name="email" id="email" placeholder="Email" />
-									</div>
-									<div class="col-12">
-										<input type="text" name="subject" id="subject" placeholder="Subject" />
-										
-									</div>
-									<div class="col-12">
-										<textarea name="message" id="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<ul class="actions">
-											<li><input id="submit" name="submit" type="submit" value="Send Message" /></li>
-											<li><input type="reset" value="Clear Form" class="alt" /></li>
-										</ul>
-									</div>
-								</div>
-							</form> -->
-						</div>
-						<div class="col-12">
-							<hr />
-							<h3>Find me on ...</h3>
-							<ul class="social">
-								<li><a href="https://twitter.com/oscieux" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="https://www.facebook.com/oscieuxdatascientist/?modal=admin_todo_tour" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="https://www.linkedin.com/in/oscieux/" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="https://github.com/oscieux" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
-								<!--
-								<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon fa-rss"><span>RSS</span></a></li>
-								<li><a href="#" class="icon fa-instagram"><span>Instagram</span></a></li>
-								<li><a href="#" class="icon fa-foursquare"><span>Foursquare</span></a></li>
-								<li><a href="#" class="icon fa-skype"><span>Skype</span></a></li>
-								<li><a href="#" class="icon fa-soundcloud"><span>Soundcloud</span></a></li>
-								<li><a href="#" class="icon fa-youtube"><span>YouTube</span></a></li>
-								<li><a href="#" class="icon fa-blogger"><span>Blogger</span></a></li>
-								<li><a href="#" class="icon fa-flickr"><span>Flickr</span></a></li>
-								<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
-								-->
-							</ul>
-							<hr />
-						</div>
-					</div>
-					<footer>
-						<ul id="copyright">
-							<li>&copy; Olivier Scieux. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
-				</div>
-			</article>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
 </html>
