--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0; url=https://github.com/oscieux">
+		<meta http-equiv="refresh" content="0; url=http://www.osds.fr/">
 	</head>
 </html>
